--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.OPSC7312POEWingWatchApp"
         tools:targetApi="31">
         <activity
+            android:name=".JournalEntryPage"
+            android:exported="false" />
+        <activity
             android:name=".ComandAchieFragment"
             android:exported="false" />
         <activity
@@ -58,7 +61,6 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCi6LQI06G1Xaxo4djAfu88B4uR9bYeqPs" />
-
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
